Angband 3.1.0
=============

This is an Angband development version -- it may be buggy, so be warned!

Thanks for this release go to: Eytan Zweig, pelpel, Kenneth Boyd,
J.D. White, Eddie Grove, Rowan Beentje, Nick McConnell, Gabriel
Cunningham, Shanoah Alkire, Alexander Philips, mikon, Antony Sidwell,
Joe Buck, Erik Osheim, d_m, and all the alpha- and beta- testers who
downloaded the game, sometimes in an extremely shaky state, and played
it anyway.

Noticeable up-front UI changes
------------------------------

 * Add EyAngband-style quickstart option.
 * Notes, like NPP and FA, except with brand new code by J.D. White.
   (#10)
 * Add a trap detection indicator.  Also, colour the edges of trap-
   detected areas green. (#19)
 * Make status bar display all timed effects, left-to-right, which
   involves moving the dungeon level to the bottom of the left-hand
   display. (#191)
 * Add show_lists option, which is the same as always_show_lists in
   Ey. (#25)
 * Auto-wield birth items (#24)
 * Change the object information screen quite a bit: (#214, #26)
   - Show average damage for weapons and ammo (#26)
   - Make descriptions a fair bit terser (#399)
   - Show breakage chance for ammo
   - Track item origin, so every item has a tag telling you where it
     came from (#149)
 * Recolour the monster recall: (part of #152)
   - Monster's depth is in red if it's beyond maximum depth, light
     green otherwise.
 * Add how many items the player already has when buying something at
   the store.  (closes #151)
 * Allow use of the space bar to advance a screenful in all
   menus.  (#244)
 * Make all menus wraparound at the top/bottom.  (#244)
 * Monster recall display now cycles through monsters in level order,
   not in the order that the monster definition file is written
   in.  (#302)
 * Add an indication of maximum capacity in the inventory
   display.  (#358)
 * Menus should use 1234567890 as little as possible for "tags".  (#292)